extends Control

const password = "1234"

onready var label = $VBoxContainer/MarginContainer/Label

func key_press(digit):
	if len(label.text) < 4:
		label.text += str(digit)
		
		


func _on_Button1_pressed():
	pass # Replace with function body.



func _on_Button2_pressed():
	pass # Replace with function body.



func _on_Button3_pressed():
	pass # Replace with function body.



func _on_Button4_pressed():
	pass # Replace with function body.



func _on_Button5_pressed():
	pass # Replace with function body.



func _on_Button6_pressed():
	pass # Replace with function body.


func _on_Button7_pressed():
	pass # Replace with function body.



func _on_Button8_pressed():
	pass # Replace with function body.



func _on_Button9_pressed():
	pass # Replace with function body.



func _on_Button10_pressed():
	pass # Replace with function body.



func _on_Button11_pressed():
	pass # Replace with function body.



func _on_Button12_pressed():
	pass # Replace with function body.
